--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,4 +19,11 @@ dependencies = [
     "anthropic",
     "literalai",
     "asyncpg",
+    # Supabase integration dependencies
+    "supabase>=2.0.0",
+    "tqdm>=4.65.0",
+    "numpy>=1.24.0",
+    # Web app dependencies (optional)
+    "fastapi",
+    "uvicorn",
 ]
