--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Minimal dependencies for Chainlit client only
-chainlit
-anthropic
-python-dotenv
+chainlit>=1.0.0
+anthropic>=0.21.0
+python-dotenv>=1.0.0
 pydantic>=2.0.0
-llama_index.llms.google_genai 
+llama-index-core>=0.10.0
+llama-index-llms-google-genai>=0.1.0 
